# zziplib

./: .gitignore  CMakeLists.txt
bins/: CMakeLists.txt  unzzip.c  unzzipcat-big.c  unzzipcat-mem.c  unzzipcat-mix.c  unzzipcat-zip.c  zzcat.c  zzip.c  zziptest.c  zzxordir.c
cmake/: README.md  Zzip.cmake  build_external.cmake  common_config.cmake  config.h.in  gen_config_header.cmake  get_dependent_libs.cmake  git_label_version.cmake  vs2015_build.cmd  zzip.pc.cmake.in
test/: CMakeLists.txt
zzip/: CMakeLists.txt  __dirent.h  __hints.h  __mkdir.h  __string.h  _msvc.h  conf.h  fetch.h  fseeko.c  fseeko.h  info.c  memdisk.c  memdisk.h  mmapped.h  write.c  write.h
zzipwrap/: CMakeLists.txt
