CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../cmake)

if(POLICY CMP0048)
    cmake_policy(SET CMP0048 NEW)
endif()

PROJECT(test VERSION "${PROJECT_VERSION}" LANGUAGES C)

INCLUDE(common_config)


ADD_EXECUTABLE(zzipself zzipself.c)
TARGET_LINK_LIBRARIES(zzipself ${ZZIP_LIB} ${Z_LIB})
INSTALL (TARGETS zzipself RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin COMPONENT applications)
ADD_DEPENDENCIES( zzipself zzip )

ADD_EXECUTABLE(zzipsetstub zzipsetstub.c)
TARGET_LINK_LIBRARIES(zzipsetstub ${ZZIP_LIB} ${Z_LIB})
INSTALL (TARGETS zzipsetstub RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin COMPONENT applications)
ADD_DEPENDENCIES( zzipsetstub zzip )
