CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../cmake)

if(POLICY CMP0048)
    cmake_policy(SET CMP0048 NEW)
endif()

PROJECT(zzipwrap VERSION "${PROJECT_VERSION}" LANGUAGES C)

INCLUDE(get_dependent_libs)


ADD_EXECUTABLE(zzipwrap zzipwrap.c wrap.c)
TARGET_LINK_LIBRARIES(zzipwrap -lzzip -lz)
INSTALL (TARGETS zzipwrap RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin COMPONENT applications)
ADD_DEPENDENCIES( zzipwrap zzip )

